Change dwm transparency

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -12,6 +12,7 @@ opacity-rule = [
 	"100:class_g = 'chocolate-doom'",
 	"100:class_g = 'quakespasm'",
 	"100:class_g = 'Chromium'",
+	"95:class_g = 'dwm'",
 ]
 
 backend = "xrender";
