True green colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,17 @@
 set -g display-panes-active-colour blue
-set -g display-panes-colour "#dddddd"
+set -g display-panes-colour "#91ff66"
 set -g display-time 10000
-set -g message-style "fg=#ffffff bold"
-set -g pane-active-border-style fg=#dddddd
-set -g pane-border-style fg=#555555
+set -g message-style "fg=#91ff66 bold"
+set -g pane-active-border-style fg=#91ff66
+set -g pane-border-style fg=#000000
 set -g set-titles-string "#S #I #W - \"#T\" #{session_alerts}"
 set -g status-bg black
 set -g status-keys emacs
 set -g status-left ""
 set -g status-position top
-set -g status-right '#[fg=#ffffff] %d-%m  %H:%M:%S'
-setw -g window-status-style "fg=#888888"
-setw -g window-status-current-style "fg=#ffffff bold"
+set -g status-right '#[fg=#91ff66] %d-%m  %H:%M:%S'
+setw -g window-status-style "fg=#91ff66"
+setw -g window-status-current-style "fg=#91ff66 bold"
 setw -g window-status-format '#I#F'
 setw -g window-status-current-format '#I #W'
 
